corrected category tile style on mobile

--- a/src/app/todos/category-tiles/category-tiles.component.scss
+++ b/src/app/todos/category-tiles/category-tiles.component.scss
@@ -4,13 +4,12 @@
   gap: 20px;
   max-width: 800px;
   margin: 0 auto;
-  // background-color: #0000006e;
 
   @media (max-width: 1200px) {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 400px) {
     grid-template-columns: 1fr;
   }
 }
